--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_inappwebview: ^5.7.2+3
+  http: ^1.2.2
+  get: ^4.6.6
   
 
 dev_dependencies:
